--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-datepicker": "^6.2.0",
+    "react-day-picker": "^9.0.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-dropzone-component": "^3.2.0",
